<resources>
    <string name="app_name">COMMOV</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="skip_login">Skip Login</string>
    <string name="password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_add">Add</string>
    <string name="menu_view_all">View</string>
    <string name="notes">Notes</string>
    <string name="name_label">Name</string>
    <string name="save">save</string>
    <string name="description">Description</string>
    <string name="map">Map</string>
    <string name="added_points">Added Points</string>
    <string name="issueLabel">Issue</string>
    <string name="issueTitle">Title</string>
    <string name="issueDescription">Description</string>
    <string name="issueSave">Save</string>
    <string name="issuePhoto">Photo</string>
    <string name="errorGettingIssues">Some error occurred while getting all issues!</string>
    <string name="ErrorCreatingIssue">Some error occurred while creating a new issue!</string>
    <string name="createIssueFieldsMissing">Make sure to fill all the fields!</string>
    <string name="issueCreated">Issue created successfully!</string>
    <string name="emptyDescription">The description text is empty</string>
    <string name="createNoteTitle">Create Note</string>
    <string name="editNoteTitle">Edit Note</string>
    <string name="editDescriptionEmpty">The description text is empty</string>
    <string name="noteListTitle">Notes</string>
    <string name="commovhelp">CommovHelp</string>
    <string name="commovhelp">CommovHelp</string>
    <string-array name="weekdays">
        <item>Monday</item>
        <item>Thuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

</resources>
