<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/issueTitleLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/issueTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/issueTitleEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issueTitleLabel" />

    <TextView
        android:id="@+id/issueDescLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/issueDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issueTitleEdit" />

    <EditText
        android:id="@+id/issueDescEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issueDescLabel" />

    <Button
        android:id="@+id/saveIssue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/issueSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rIssuePhoto" />

    <ImageView
        android:id="@+id/rIssuePhoto"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issuePhotoLabel"
        app:srcCompat="@drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/issuePhotoLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/issuePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issueDescEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>